@@ -200,12 +200,11 @@ div .progressbar span {
 
 .groupItem
 {
+	margin: 10px;
 	background-color:#FBFBFB;
-/*	border:1px solid #CCCCCC; */
 	line-height:75px;
 	cursor: move;
-	margin: 0 0 10px;
-	width: 390px;
+	width: 295px;
 }
 
 .groupItem .item_top
@@ -216,7 +215,7 @@ div .progressbar span {
 	border-radius: 3px;
 	display:block;
 	background-color:#2683AE;
-	color:#FFFFFF;
+	color: #FFFFFF;
 	font-weight:bold;
 	line-height: 28px;
 	height: 28px;
@@ -225,6 +224,10 @@ div .progressbar span {
 	position: static;
 }
 
+.groupItem .album_obj
+{
+	background-color:#D54E21;
+}
 .groupItem .item_top a
 {
 	color:#FFFFFF;
@@ -241,7 +244,7 @@ div .progressbar span {
 	border-color:#DFDFDF;
 	border-style:none solid solid;
 	border-width:0 1px 1px;
-	padding: 5px 0 10px 5px;
+	padding:2px 0 20px 2px;
 }
 
 .itemContent p {
@@ -260,13 +263,14 @@ div .progressbar span {
 
 .inlinepicture img
 {
-	max-height:75px;
+	margin:3px;
+	max-height:60px;
 }
 
 .sort_placeholder
 {
 	border:1px dashed #bba !important;
-	margin-bottom: 10px;
+	margin: 10px;
 	background: #F9F9F9;
 }
 
@@ -274,27 +278,58 @@ div .progressbar span {
 	margin-top: 10px;
 }
 
-#galleryContainer {
-	background-color:#FBFBFB;
-	border:1px solid #BBBBBB;
-	margin:10px 440px 10px 10px;
-	padding:0px 10px 10px 10px;
+.target-album {
+	margin:10px 665px 10px 10px;
+	padding:0px 10px 10px 0px;
 }
 
-#selectContainer {
+.sidebar-right {
 	float:right;
-	background:#FBFBFB none repeat scroll 0%;
-	border:1px solid #BBBBBB;
-	margin:0pt 10px 10px;
-	padding:0px 5px 5px 10px;
-	width:395px;
+	margin:0pt 10px;
+	width:315px;
 }
 
-#galleryContainer h3, #selectContainer h3 {
-	color:#333333;
-	text-align:center;
-	line-height:25px;	
+.widget-holder {
+	background:#FBFBFB none repeat scroll 0%;
+	-moz-border-radius-bottomleft:8px;
+	-moz-border-radius-bottomright:8px;
+	border-color:#DDDDDD;
+	border-style:none solid solid;
+	border-width:0 1px 1px;
+	min-height: 400px;	
+	padding-top:1px;
 }
+
+.target {
+	background-color:#F1F1F1;
+}
+
+div.sidebar-name h3 {
+	text-align:center;
+	line-height:25px;
+	margin: 0;
+	padding: 5px 12px;
+	font-size: 13px;
+}
+
+div.sidebar-name {
+	border-color:#DFDFDF;
+	text-shadow:0 1px 0 #FFFFFF;
+	background-repeat: repeat-x;
+	background-position: 0 0;
+	font-size: 13px;
+	border-width: 1px;
+	border-style: solid;
+	-moz-border-radius-topleft: 8px;
+	-moz-border-radius-topright: 8px;
+	-webkit-border-top-right-radius: 8px;
+	-webkit-border-top-left-radius: 8px;
+	-khtml-border-top-right-radius: 8px;
+	-khtml-border-top-left-radius: 8px;
+	border-top-right-radius: 8px;
+	border-top-left-radius: 8px;
+}
+
 
 /* SETTINGS FOR SORT GALLERY */
 
